--- a/stub_pages/authorizationPage_staff.html
+++ b/stub_pages/authorizationPage_staff.html
@@ -57,6 +57,9 @@
 	
 	</div>
 
+
+<script src="../scripts/script_fill_staff_data.js"></script>
+
 	<div id="Main_block">
     	<p>Наши преподаватели:</p>
 			<ul>
