lab javascript webpage update (7)

--- a/stub_pages/authorizationPage_adress.html
+++ b/stub_pages/authorizationPage_adress.html
@@ -58,11 +58,6 @@
 	</div>
 
 	<div id="Main_block">
-    	<p>Наши адреса:</p>
-			<ul>
-			  <li>Mini Ketchup</li>
-			  <li>Jumbo Ketchup</li>
-			  <li>Mega Jumbo Ketchup</li>
-			</ul>
+    	<script type="module", src="../scripts/ObjInf_test.js"></script>
     </div>
 </body>
