--- a/stub_pages/authorizationPage_staff.html
+++ b/stub_pages/authorizationPage_staff.html
@@ -58,13 +58,9 @@
 	</div>
 
 
-<script src="../scripts/script_fill_staff_data.js"></script>
+
 
 	<div id="Main_block">
-    	<p>Наши преподаватели:</p>
-			<ul>
-			  <li>Иван Иванович</li>
-			  <li>Петр Петрович</li>
-			</ul>
+    	<script type="module" src="../scripts/fill_Staff_Info.js"></script>
     </div>
 </body>
