--- a/stub_pages/authorizationPage_staff.html
+++ b/stub_pages/authorizationPage_staff.html
@@ -61,6 +61,23 @@
 
 
 	<div id="Main_block">
-    	<script type="module" src="../scripts/fill_Staff_Info.js"></script>
+		
+
+    	
+		<script type="module">
+import { fillStaffInfo_function } from "../scripts/fill_Staff_Info.js";
+fillStaffInfo_function();
+
+		</script>
+
+
+
+
+
+
+
+				
+		</div>
+
     </div>
 </body>
